# AgentShield

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENT_SETUP.md  LICENSE  MANIFEST.in  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/action/agentshield-action/: action.yml
.github/workflows/: ci.yml
docs/: deep-mode.md  github-action.md  pre-commit.md
examples/: agentshield_config.toml  hermes_config.yaml  openclaw_config.yaml
examples/hermes-plugin/: __init__.py  plugin.yaml
integrations/openclaw/: README.md  index.mjs  openclaw.plugin.json  package.json  scan-command.mjs  scan-command.test.mjs
scripts/: README.md  container_e2e_test.sh  container_install_deps.sh  hermes_realtest.sh  openclaw_realtest.sh
src/agentshield/: __init__.py  cli.py
src/agentshield/analyzers/: bandit_runner.py  cargo_audit_runner.py  diff_scanner.py  dockerfile_scanner.py  drift_detector.py  license_checker.py  npm_audit_runner.py  prompt_injection.py  semgrep_runner.py  setup_py_inspector.py  syspkg_cve.py  syspkg_detector.py  trust_score.py  typosquatting.py  wheel_extractor.py
src/agentshield/analyzers/data/: top_packages.json
src/agentshield/analyzers/rules/: T3_1_shell_exec.yaml  T3_2_network_install.yaml  T3_3_filesystem_write.yaml  T3_4_obfuscation.yaml  T3_5_credential_harvest.yaml
src/agentshield/core/: cache.py  config.py  deps.py  manifest.py  models.py  rate_limiter.py  response_engine.py  retry.py  sbom.py  scanner.py  versions.py
src/agentshield/databases/: github_advisory.py  malicious_db.py  nvd.py  osv.py  warm.py
src/agentshield/databases/data/: malicious_packages.json
src/agentshield/enforce/: __init__.py  command_scan.py  conda.py  execve.py  proxy.py  registry.py  shim.py
src/agentshield/guard/: __init__.py  shell_wrapper.py
src/agentshield/integrations/claude_code/: __init__.py
src/agentshield/integrations/hermes/: __init__.py  _types.py  plugin.py
src/agentshield/integrations/openclaw/: __init__.py  _types.py  skill.py
src/agentshield/reports/: __init__.py  models.py  posture.py  renderers.py  scoring.py
src/agentshield/reports/templates/: posture_report.html.jinja2
src/agentshield/server/: __init__.py  http_server.py  ipc.py  mcp.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli_e2e.py  test_e2e_block.py  test_enforcement_matrix.py  test_guard_e2e.py  test_mcp.py  test_scanner_e2e.py  test_server_e2e.py  test_syspkg_cve_e2e.py  test_syspkg_e2e.py
tests/integration/: test_github_advisory.py  test_hermes.py  test_nvd.py  test_openclaw.py  test_osv.py
tests/unit/: test_cache.py  test_claude_code_hook.py  test_cli.py  test_config.py  test_deps.py  test_diff_scanner.py  test_dockerfile_scanner.py  test_drift_detector.py  test_github_advisory.py  test_http_server.py  test_ipc.py  test_license_checker.py  test_malicious_db.py  test_manifest.py  test_mcp_posture.py  test_models.py  test_nvd.py  test_offline_mode.py  test_osv.py  test_posture.py  test_prompt_injection.py  test_rate_limiter.py  test_renderers.py  test_response_engine.py  test_risk_score.py  test_sbom.py  test_scan_file.py  test_scanner.py  test_shell_wrapper.py  test_static_analysis.py  test_syspkg_cve.py  test_syspkg_detector.py  test_trust_score.py  test_typosquatting.py  test_versions.py  test_warm.py  test_wheel_extractor.py
