[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield"
version = "0.1.0"
description = "Security layer for AI agent frameworks — intercepts package installs and checks for vulnerabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["security", "ai-agents", "package-scanning", "vulnerability", "hermes", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx[asyncio]>=0.27",
    "aiosqlite>=0.20",
    "python-Levenshtein>=0.25",
    "toml>=0.10",
    "jinja2>=3.1",
]

[project.optional-dependencies]
hermes = [
    "hermes-agent>=0.1",  # pinned once stable API available
]
openclaw = [
    "openclaw>=0.1",      # pinned once stable API available
]
static-analysis = [
    "bandit>=1.7",
    "semgrep>=1.70",
]
all = [
    "agentshield[hermes,openclaw,static-analysis]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-toml>=0.10",
    "pre-commit>=3.7",
]

[project.scripts]
agentshield = "agentshield.cli:app"

[project.urls]
Repository = "https://github.com/yourusername/agentshield"
Issues = "https://github.com/yourusername/agentshield/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshield"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/agentshield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agentshield --cov-report=term-missing"

[tool.coverage.run]
source = ["src/agentshield"]
omit = ["tests/*"]
